# CrossdressSQL

./: CMakeLists.txt  Database.cpp  Database.h  Manager.cpp  Manager.h  Util.cpp  Util.h  main.cpp
entities/: EntityDescription.h  Field.h  FieldConstraints.h  FieldDescription.h  FieldType.h  FieldTypes.h  Header.cpp  Header.h  KeyWords.h  Pointer.cpp  Pointer.h  Row.h  RowHeader.h  Table.h  TableScheme.h  Value.h
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.js  index.module.css
general/: constraints.conf  general.conf  schemes.conf  sequences.conf
translation/: ExpressionAndTerms.h  Factor.h  Lexer.h  LogicalOperators.h  Operators.h  Term.h  Translator.h
